@@ -1,4 +1,10 @@
 
+2020-11-27  Ron Norman <rjn@inglenet.com>
+
+	* codegen.c,typeck.c,parser.y,tree.h: 
+			Optimize subscript checking when SEARCHing table
+			Emit check for valid subscript on entry to SEARCH logic
+
 2020-11-25  Ron Norman <rjn@inglenet.com>
 
 	* codegen.c: Additional work to enhance INITIALIZE
